--- a/userMeals.html
+++ b/userMeals.html
@@ -62,6 +62,38 @@
 		<div><br></div>
 	</div>
 
+	<div ng-controller="mealIngredientController">
+		<div class="row">
+		<div class="small-6 columns">Current Ingredients
+			<table>
+				<thead>
+				    <tr>
+				      	<th>Name</th>					      					          
+				    </tr>
+			  	</thead>
+			  	<tbody>
+				    <tr ng-repeat="meal in meals | filter:query | orderBy:orderBy">
+				      	<td>{{ meal.name }}</td>					      	      
+				    </tr>			   			  
+			  	</tbody>
+			</table>
+		</div>
+		<div class="small-6 columns">Available Ingredients
+			<table>
+				<thead>
+				    <tr>
+				      	<th>Name</th>					      					      	     
+				    </tr>
+			  	</thead>
+			  	<tbody>
+				    <tr ng-repeat="avilable_ingredient in avilable_ingredients | filter:query | orderBy:orderBy">
+				      	<td>{{ avilable_ingredient.name }}</td>					      	      
+				    </tr>			   			  
+			  	</tbody>
+			</table>
+		</div>
+	</div>
+
 	<div ng-controller="newMealController">
 		<div class="row">
 			<div class="small-4 large-4 columns"><b>Create new Meal</b></div>
