--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 
 <body>
-	
-    <div class="row">
-        <br>
-    </div>
-
 	<div class="row">
-		<div class="small-3 columns"><a href="#adminCompanies" class="button tiny">Admin Companies</a></div>
-		<div class="small-3 columns"><a href="#adminLocations" class="button tiny">Admin Locations</a></div>
-		<div class="small-3 columns"><a href="#userMeals"      class="button tiny">Meals</a></div>
-		<div class="small-3 columns end"><a href="#userIngredients" class="button tiny">Ingredients</a></div>
+		<div class="small-8 columns">
+            <a href="#adminCompanies"  class="button tiny">Admin Companies</a>
+		    <a href="#adminLocations"  class="button tiny">Admin Locations</a>
+		    <a href="#userMeals"       class="button tiny">Meals</a>
+		    <a href="#userIngredients" class="button tiny">Ingredients</a>
+            <a href="#userStock"       class="button tiny">Stock</a>
+        </div>
 	</div>
 
     <div class="row">
-	   <div ng-view></div>
+        <div class="small-12 columns">
+	       <div ng-view></div>
+        </div>
     </div>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>  
@@ -39,9 +39,13 @@
 
     <!-- Source Controllers -->
     <script type="text/javascript" src="controllers/company_controller.js"></script>
+    <script type="text/javascript" src="controllers/company_edit_controller.js"></script>
     <script type="text/javascript" src="controllers/location_controller.js"></script>      
+    <script type="text/javascript" src="controllers/location_edit_controller.js"></script>
     <script type="text/javascript" src="controllers/meal_controller.js"></script>
-    <script type="text/javascript" src="controllers/ingredient_controller.js"></script>   
+    <script type="text/javascript" src="controllers/meal_edit_controller.js"></script>
+    <script type="text/javascript" src="controllers/ingredient_controller.js"></script>  
+    <script type="text/javascript" src="controllers/ingredient_edit_controller.js"></script> 
 
     <!-- Source Routes -->
     <script type="text/javascript" src="routes/routes.js"></script>         
