adding stocking controllers/services/views. renamed inventories to stock

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		    <a href="#adminLocations"  class="button tiny">Admin Locations</a>
 		    <a href="#userMeals"       class="button tiny">Meals</a>
 		    <a href="#userIngredients" class="button tiny">Ingredients</a>
-            <a href="#userStock"       class="button tiny">Stock</a>
+            <a href="#userStocks"       class="button tiny">Stock</a>
         </div>
 	</div>
 
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="services/location_service.js"></script>
     <script type="text/javascript" src="services/meal_service.js"></script>
     <script type="text/javascript" src="services/ingredient_service.js"></script>
+    <script type="text/javascript" src="services/stock_service.js"></script>
 
     <!-- Source Controllers -->
     <script type="text/javascript" src="controllers/company_controller.js"></script>
@@ -45,7 +46,8 @@
     <script type="text/javascript" src="controllers/meal_controller.js"></script>
     <script type="text/javascript" src="controllers/meal_edit_controller.js"></script>
     <script type="text/javascript" src="controllers/ingredient_controller.js"></script>  
-    <script type="text/javascript" src="controllers/ingredient_edit_controller.js"></script> 
+    <script type="text/javascript" src="controllers/ingredient_edit_controller.js"></script>
+    <script type="text/javascript" src="controllers/stock_controller.js"></script>
 
     <!-- Source Routes -->
     <script type="text/javascript" src="routes/routes.js"></script>         
