deleted userMealSelected.html, renamed userStocks to userReconciles.html, got the ingredient reconcile page working with real time updates to ingredient amounts for meals. working on the Meal stock page. created a reconcile_controller, reconcile_service and userMealStock pages.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		    <a href="#adminLocations"  class="button tiny">Admin Locations</a>
 		    <a href="#userMeals"       class="button tiny">Meals</a>
 		    <a href="#userIngredients" class="button tiny">Ingredients</a>
-            <a href="#userStocks"       class="button tiny">Stock</a>
+            <a href="#userMealStocks"  class="button tiny">Meal Stock</a>
+            <a href="#userReconciles"  class="button tiny">Reconcile</a>
         </div>
 	</div>
 
@@ -37,6 +38,7 @@
     <script type="text/javascript" src="services/meal_service.js"></script>
     <script type="text/javascript" src="services/ingredient_service.js"></script>
     <script type="text/javascript" src="services/stock_service.js"></script>
+    <script type="text/javascript" src="services/reconcile_service.js"></script>
 
     <!-- Source Controllers -->
     <script type="text/javascript" src="controllers/company_controller.js"></script>
@@ -48,6 +50,7 @@
     <script type="text/javascript" src="controllers/ingredient_controller.js"></script>  
     <script type="text/javascript" src="controllers/ingredient_edit_controller.js"></script>
     <script type="text/javascript" src="controllers/stock_controller.js"></script>
+    <script type="text/javascript" src="controllers/reconcile_controller.js"></script>
 
     <!-- Source Routes -->
     <script type="text/javascript" src="routes/routes.js"></script>         
