Meal stock decrementing now works, all ingredients modified at each sale. Stopped showing meals in the Meal Stock page if the meal is not enabled. Added Reports tab

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
 <body>
 	<div class="row">
-		<div class="small-8 columns">
+		<div class="small-10 columns">
             <a href="#adminCompanies"  class="button tiny">Admin Companies</a>
 		    <a href="#adminLocations"  class="button tiny">Admin Locations</a>
 		    <a href="#userMeals"       class="button tiny">Meals</a>
 		    <a href="#userIngredients" class="button tiny">Ingredients</a>
             <a href="#userMealStocks"  class="button tiny">Meal Stock</a>
             <a href="#userReconciles"  class="button tiny">Reconcile</a>
+            <a href="#userReports"     class="button tiny">Reports</a>
         </div>
 	</div>
 
