--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>  
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular-route.js"></script>   
+    <script type="text/javascript" src="angular.min.js"></script>  
+    <script type="text/javascript" src="angular-route.min.js"></script>
+    <script type="text/javascript" src="Chart.min.js"></script> 
     
     <!-- Source Inventory App -->
     <script type="text/javascript" src="apps/inventories.js"></script>  
@@ -52,6 +53,7 @@
     <script type="text/javascript" src="controllers/ingredient_edit_controller.js"></script>
     <script type="text/javascript" src="controllers/stock_controller.js"></script>
     <script type="text/javascript" src="controllers/reconcile_controller.js"></script>
+    <script type="text/javascript" src="controllers/report_controller.js"></script>
 
     <!-- Source Routes -->
     <script type="text/javascript" src="routes/routes.js"></script>         
