Added alertify library to project, implemented notifications for each action.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <!-- Included CSS Files, use foundation.css if you do not want minified code -->
   	<link rel="stylesheet" href="foundation.css">
+    <link rel="stylesheet" href="alertify.core.css">
+    <link rel="stylesheet" href="alertify.default.css">
 </head>
 
 <body>
@@ -29,7 +31,7 @@
 
     <script type="text/javascript" src="angular.min.js"></script>  
     <script type="text/javascript" src="angular-route.min.js"></script>
-    <script type="text/javascript" src="Chart.min.js"></script> 
+    <script type="text/javascript" src="alertify.min.js"></script>
     
     <!-- Source Inventory App -->
     <script type="text/javascript" src="apps/inventories.js"></script>  
