--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
 	<div class="row">
 		<div class="small-10 columns">
-            <a href="#adminCompanies"  class="button tiny">Admin Companies</a>
-		    <a href="#adminLocations"  class="button tiny">Admin Locations</a>
-		    <a href="#userMeals"       class="button tiny">Meals</a>
-		    <a href="#userIngredients" class="button tiny">Ingredients</a>
-            <a href="#userMealStocks"  class="button tiny">Meal Stock</a>
-            <a href="#userReconciles"  class="button tiny">Reconcile</a>
-            <a href="#userReports"     class="button tiny">Reports</a>
+            <a href="#companies"   class="button tiny">Admin Companies</a>
+		    <a href="#locations"   class="button tiny">Admin Locations</a>
+		    <a href="#meals"       class="button tiny">Meals</a>
+		    <a href="#ingredients" class="button tiny">Ingredients</a>
+            <a href="#mealSales"   class="button tiny">Meal Sales</a>
+            <a href="#reconciles"  class="button tiny">Reconcile</a>
+            <a href="#reports"     class="button tiny">Reports</a>
         </div>
 	</div>
 
