Got sass working and compiling.  Linters are working. Created bower.json, package.json and Gemfile for dependency installs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>User Inventory</title>
 
     <!-- Included CSS Files, use foundation.css if you do not want minified code -->
-  	<link rel="stylesheet" href="assets/css/vendor/foundation.css">
+  	<link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/vendor/alertify.core.css">
     <link rel="stylesheet" href="assets/css/vendor/alertify.default.css">
 </head>
