moved settings file, redid the company and location views.

--- a/index.html
+++ b/index.html
@@ -4,34 +4,24 @@
 <head>
     <title>User Inventory</title>
 
-    <!-- Included CSS Files, use foundation.css if you do not want minified code -->
   	<link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/vendor/alertify.core.css">
     <link rel="stylesheet" href="assets/css/vendor/alertify.default.css">
 </head>
 
 <body>
-    <div class="row">
-        <div class="small-2 columns">
-            <a href="#companies" class="button tiny">Admin Companies</a>
-        </div>
-        <div class="small-2 columns">
-            <a href="#locations" class="button tiny">Admin Locations</a>
-        </div>
-        <div class="small-2 columns">
-            <a href="#meals" class="button tiny">Meals</a>
-        </div>
-        <div class="small-2 columns">
-            <a href="#ingredients" class="button tiny">Ingredients</a>
-        </div>
-        <div class="small-2 columns">
-            <a href="#mealSales" class="button tiny">Meal Sales</a>
-        </div>
-        <div class="small-2 columns">
-            <a href="#reconciles" class="button tiny">Reconcile</a>
-        </div>
-        <div class="small-2 columns end">
-            <a href="#reports" class="button tiny">Reports</a>
+    <div id="header">
+        <div class="row">
+            <div class="small-12 columns">
+                <a href="#companies" class="button small">Companies</a>
+                <a href="#locations" class="button small">Locations</a>
+                <a href="#meals" class="button small">Meals</a>
+                <a href="#ingredients" class="button small">Ingredients</a>
+                <a href="#mealSales" class="button small">Meal Sales</a>
+                <a href="#reconciles" class="button small">Reconcile</a>
+                <a href="#reports" class="button small">Reports</a>
+            </div>
         </div>
     </div>
 
